--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "@react-navigation/material-bottom-tabs": "^6.2.15",
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/native-stack": "^6.9.10",
+    "@walletconnect/react-native-dapp": "^1.8.0",
+    "axios": "^1.3.4",
     "crypto": "^1.0.1",
     "ethers": "^6.0.8",
     "events": "^3.3.0",
+    "phone": "^3.1.35",
     "process": "^0.11.10",
     "react": "18.2.0",
     "react-native": "0.71.3",
@@ -29,14 +32,20 @@
     "react-native-background-timer": "^2.4.1",
     "react-native-crypto": "^2.2.0",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.2.0",
+    "react-native-phone-number-input": "^2.1.0",
     "react-native-randombytes": "^3.6.1",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-svg": "9.6.4",
+    "react-native-touch-id": "^4.4.1",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
     "readable-stream": "^1.0.33",
     "redux": "^4.2.1",
+    "rn-range-slider": "^2.2.2",
+    "rn-secure-storage": "^2.0.8",
     "stream": "^0.0.2",
     "stream-browserify": "^1.0.0"
   },
