--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@metamask/detect-provider": "^2.0.0",
     "@metamask/sdk": "^0.1.0",
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/slider": "^4.4.2",
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/material-bottom-tabs": "^6.2.15",
@@ -36,6 +37,7 @@
     "react-native-paper": "^5.2.0",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-randombytes": "^3.6.1",
+    "react-native-ratings": "^8.1.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-svg": "9.6.4",
